--- a/ch9/nodebird-api/package.json
+++ b/ch9/nodebird-api/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
@@ -21,6 +22,7 @@
     "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.6.1",
     "sequelize": "^6.23.2",
     "uuid": "^9.0.0"
   }
