--- a/ch10/config/config.json
+++ b/ch10/config/config.json
@@ -8,15 +8,15 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "skoo1293!@#",
+    "database": "nodebird_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "nodebird_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
