--- a/ch10/package.json
+++ b/ch10/package.json
@@ -11,6 +11,7 @@
   "author": "kang",
   "license": "MIT",
   "devDependencies": {
+    "artillery": "^2.0.0-30",
     "jest": "^29.4.2",
     "nodemon": "^2.0.19",
     "supertest": "^6.3.3"
