--- a/ch11/socket/package.json
+++ b/ch11/socket/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "gif-chat",
+  "name": "socket",
   "version": "1.0.0",
-  "description": "GIF 채팅방",
+  "description": "socket",
   "main": "app.js",
   "scripts": {
-    "start": "node_modules/.bin/nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.3",
+    "color-hash": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3",
     "socket.io": "^4.6.0",
     "ws": "^8.12.1"
