--- a/ch11/chatting/package.json
+++ b/ch11/chatting/package.json
@@ -19,7 +19,9 @@
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
+    "sequelize": "^6.28.0",
     "socket.io": "^4.6.0",
     "ws": "^8.12.1"
   },
