--- a/ch12/package.json
+++ b/ch12/package.json
@@ -21,7 +21,10 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.0.0",
-    "sequelize-cli": "^6.0.0"
+    "sequelize-cli": "^6.0.0",
+    "socker.io": "^0.0.0-alpha-beta",
+    "socket.io": "^4.6.1",
+    "sse": "^0.0.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
